# LearnCMake

./: README.md
1_HelloWorld/: CMakeLists.txt  main.cc
2_BasicProject/: CMakeLists.txt  my_lib.cc
3_IntermediateProjectStructure/: CMakeLists.txt
3_IntermediateProjectStructure/.cache/clangd/index/: main.cc.6F3A1B21340BF83B.idx  my_lib.cc.3B594304D8EFFE5D.idx  my_lib.h.A6BE0C984F4D1303.idx
3_IntermediateProjectStructure/src/my_lib/: my_lib.cc
